  * debian/control:
    - add missed dependency for libboinc.
    - remove dependency on python-support.
    - libboinc-app-dev: depend on libboinc.
  * debian/watch: check for even minor version, and fix dpkg warnings.
  * debian/rules:
    - use dh_python2 instead of py_support.
    - remove build-stamp, use override_dh_auto_build to build samples.
    - simplify targets by using pattern rule.

 -- Guo Yixuan <culu.gyx@gmail.com>  Tue, 10 Jul 2012 23:21:13 +0800

boinc (7.0.30+dfsg-1) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * New upstream version.

  [ Guo Yixuan ]
  * debian/rules: use dpkg-buildflags to get default flags.
  * debian/control: build-depend on dpkg-dev >= 1.16.1.1, because
    buildflags.mk and DEB_BUILD_MAINT_OPTIONS are needed.
  * debian/patches/add_hardening_flags.patch: pass CXXFLAGS, CPPFLAGS and
    LDFLAGS to hand-written Makefiles in samples/.
  * Add myself to uploaders. (Closes: #511243)

 -- Steffen Moeller <moeller@debian.org>  Sat, 30 Jun 2012 21:59:59 +0200

boinc (7.0.28+dfsg-3) UNRELEASED; urgency=low

  [ Steffen Moeller ]
  * Splitting -dev package into libboinc and libboinc-dev.
  * Added shared library for libboinc.
  * Added configure flag in debian/rules to allow dynamic clients
  * Installing more from  debian/tmp to avoid lintian wrappers
 
  [ Guo Yixuan ]
  * Add patch from Rom that fixes the project category crash.
    (Closes: #641593)

 -- Steffen Moeller <moeller@debian.org>  Mon, 28 May 2012 13:21:35 +0200

boinc (7.0.28+dfsg-2) UNRELEASED; urgency=low

  * Reactivating the screensaver (Steffen and Bernd)
    - not ready, yet.
    - not building for Wheezy
  * Addressed FTBFS on hurd (Closes: #672725)

 -- Steffen Moeller <moeller@debian.org>  Tue, 22 May 2012 01:01:39 +0200

boinc (7.0.28+dfsg-1) UNRELEASED; urgency=low

  * New upstream version.
  * Adding hardening flags.

 -- Steffen Moeller <moeller@debian.org>  Sat, 19 May 2012 12:19:25 +0200

boinc (7.0.27+dfsg-4) UNRELEASED; urgency=low
